Fix css horizontal scroll.

--- a/fl-ui/src/app/fl-header/fl-header.component.scss
+++ b/fl-ui/src/app/fl-header/fl-header.component.scss
@@ -1,10 +1,13 @@
 @import "../../variables.scss";
 
-.top-bar {
+.top-bar-wrapper {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
+}
+
+.top-bar {
   background-color: $color4;
   padding: 0.5rem 0.3rem;
   color: $color2;
